--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
+language: generic
+
 sudo: required
 services:
   - docker
 
 before_install:
   - docker build -t jamespsteinberg/docker-1 -f Dockerfile.dev .
+
+script:
+  - docker run jamespsteinberg/docker-1 npm run test -- --coverage
