--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,16 @@ before_install:
 
 script:
   - docker run jamespsteinberg/docker-1 npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  name: "docker-1"
+  env: "Docker1-env"
+  bucket_name: "elasticbeanstalk-us-east-1-365338374368"
+  bucket_path: "docker-1"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
